--- a/src/locales/es/error.json
+++ b/src/locales/es/error.json
@@ -1,3 +1,7 @@
 {
-  "Something went wrong..": "__NOT_TRANSLATED__"
+  "Something went wrong..": "__NOT_TRANSLATED__",
+  "Error..": "__NOT_TRANSLATED__",
+  "An error occurred when loading quote": "__NOT_TRANSLATED__",
+  "An error occurred when loading character detail": "__NOT_TRANSLATED__",
+  "Unhandled action type": "__NOT_TRANSLATED__"
 }
