add character without quote exception

--- a/src/locales/en/default.json
+++ b/src/locales/en/default.json
@@ -14,5 +14,6 @@
   "presumed dead": "presumed dead",
   "unknown": "unknown",
   "Loading": "Loading",
-  "Source code is here": "Source code is here"
+  "Source code is here": "Source code is here",
+  "He or she does not have quote.": "He or she does not have quote."
 }
