--- a/src/locales/es/default.json
+++ b/src/locales/es/default.json
@@ -14,5 +14,6 @@
   "presumed dead": "presunto/a muerto/a",
   "unknown": "desconocido/a",
   "Loading": "Cargando",
-  "Source code is here": "El código fuente está aquí"
+  "Source code is here": "El código fuente está aquí",
+  "He or she does not have quote.": "No tiene frase."
 }
