create reusable table component

--- a/src/locales/en/default.json
+++ b/src/locales/en/default.json
@@ -2,7 +2,7 @@
   "nickname": "nickname",
   "status": "status",
   "birthday": "birthday",
-  "occupations": "occupations",
+  "occupation": "occupation",
   "portrayed": "portrayed",
   "appearance": "appearance",
   "Load another quote": "Load another quote",
