--- a/src/locales/en/default.json
+++ b/src/locales/en/default.json
@@ -15,6 +15,6 @@
   "unknown": "unknown",
   "Loading": "Loading",
   "Source code is here": "Source code is here",
-  "He or she does not have quote.": "He or she does not have quote.",
+  "He or she does not have any quote.": "He or she does not have any quote.",
   "Image cannot be loaded.": "Image cannot be loaded."
 }
