--- a/src/locales/en/default.json
+++ b/src/locales/en/default.json
@@ -16,5 +16,7 @@
   "Loading": "Loading",
   "Source code is here": "Source code is here",
   "He or she does not have any quote.": "He or she does not have any quote.",
-  "Image cannot be loaded.": "Image cannot be loaded."
+  "Image cannot be loaded.": "Image cannot be loaded.",
+  "404 Not Found": "404 Not Found",
+  "Sorry, we can’t find that page": "Sorry, we can’t find that page"
 }
