--- a/src/locales/es/default.json
+++ b/src/locales/es/default.json
@@ -16,5 +16,7 @@
   "Loading": "Cargando",
   "Source code is here": "El código fuente está aquí",
   "He or she does not have any quote.": "No tiene ninguna frase.",
-  "Image cannot be loaded.": "No se puede cargar la imagen."
+  "Image cannot be loaded.": "No se puede cargar la imagen.",
+  "404 Not Found": "404 no encontrada",
+  "Sorry, we can’t find that page": "Lo sentimos, no podemos encontrar esa página."
 }
