updated error controll

--- a/src/locales/en/default.json
+++ b/src/locales/en/default.json
@@ -8,7 +8,6 @@
   "Load another quote": "Load another quote",
   "Something went wrong..": "Something went wrong..",
   "Go back": "Go back",
-  "Please try again.": "Please try again.",
   "alive": "alive",
   "deceased": "deceased",
   "presumed dead": "presumed dead",
@@ -16,7 +15,5 @@
   "Loading": "Loading",
   "Source code is here": "Source code is here",
   "He or she does not have any quote.": "He or she does not have any quote.",
-  "Image cannot be loaded.": "Image cannot be loaded.",
-  "404 Not Found": "404 Not Found",
-  "Sorry, we can’t find that page": "Sorry, we can’t find that page"
+  "Image cannot be loaded.": "Image cannot be loaded."
 }
