--- a/src/locales/es/default.json
+++ b/src/locales/es/default.json
@@ -8,7 +8,6 @@
   "Load another quote": "Cargar otra frase",
   "Something went wrong..": "Algo salió mal.",
   "Go back": "Regresa",
-  "Please try again.": "Por favor, vuelva a intentarlo.",
   "alive": "vivo/a",
   "deceased": "fallecido/a",
   "presumed dead": "presunto/a muerto/a",
@@ -16,7 +15,5 @@
   "Loading": "Cargando",
   "Source code is here": "El código fuente está aquí",
   "He or she does not have any quote.": "No tiene ninguna frase.",
-  "Image cannot be loaded.": "No se puede cargar la imagen.",
-  "404 Not Found": "404 no encontrada",
-  "Sorry, we can’t find that page": "Lo sentimos, no podemos encontrar esa página."
+  "Image cannot be loaded.": "No se puede cargar la imagen."
 }
